LibApp.WebApp - User Removed IsActive From Edit Action

--- a/LibApp.WebApp/Views/Users/Edit.cshtml
+++ b/LibApp.WebApp/Views/Users/Edit.cshtml
@@ -44,13 +44,13 @@
                 <select asp-for="RoleId" class="form-control" asp-items="ViewBag.RoleId"></select>
                 <span asp-validation-for="RoleId" class="text-danger"></span>
             </div>
-            <div>
+            @* <div> *@
                 @* Span is here to push the input further to the right *@
-                <span style="visibility: hidden;">Tes</span>
+@*                 <span style="visibility: hidden;">Tes</span>
                 <label class="form-check-label">
                     <input class="form-check-input" asp-for="IsActive"/> @Html.DisplayNameFor(model => model.IsActive)
                 </label>
-            </div>
+            </div> *@
             <br />
             <div class="form-group">
                 <label asp-for="CardCode" class="control-label"></label>
