--- a/LibApp.WebApp/Views/Users/Details.cshtml
+++ b/LibApp.WebApp/Views/Users/Details.cshtml
@@ -42,12 +42,9 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Role)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IsVerified)
-        </dt>
-        <dd class = "col-sm-10">
+@*         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.IsVerified)
-        </dd>
+        </dd> *@
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.IsActive)
         </dt>
