--- a/LibApp.WebApp/Views/Shared/_LoginPartial.cshtml
+++ b/LibApp.WebApp/Views/Shared/_LoginPartial.cshtml
@@ -6,13 +6,14 @@
 
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
-{
+{       
+    <li class="nav-item">
+        <p class="nav-link text-dark ">Hello @UserManager.GetUserName(User)!</p>
+    </li>
     <li class="nav-item">
         <a id="manage" class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">
-            @* Hello @UserManager.GetUserName(User)! *@
             <i class="nc-icon nc-settings-gear-65"></i>
         </a>
-
     </li>
     <li class="nav-item">
         <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
