LibApp.WebApp - User & Book CreatedByUserId & ModifiedByUserId Links in Details

--- a/LibApp.WebApp/Views/Books/Details.cshtml
+++ b/LibApp.WebApp/Views/Books/Details.cshtml
@@ -157,14 +157,16 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.ModifiedDateTime)
         </dd>
-        
+
         @if (!Model.CreatedByUser.IsNullOrEmpty())
         {
             <dt class = "col-sm-2">
                 @Html.DisplayNameFor(model => model.CreatedByUser)
             </dt>
-            <dd class = "col-sm-10">
-                @Html.DisplayFor(model => model.CreatedByUser)
+            <dd class="col-sm-10">
+                <a href="@Url.Action("Details", "Users", new { id = Model.CreatedByUserId })">
+                    @Model.CreatedByUser
+                </a>
             </dd>
         }
         
@@ -173,8 +175,10 @@
             <dt class = "col-sm-2">
                 @Html.DisplayNameFor(model => model.ModifiedByUser)
             </dt>
-            <dd class = "col-sm-10">
-                @Html.DisplayFor(model => model.ModifiedByUser)
+            <dd class="col-sm-10">
+                <a href="@Url.Action("Details", "Users", new { id = Model.ModifiedByUserId })">
+                    @Model.ModifiedByUser
+                </a>
             </dd>
         }
 
