--- a/LibApp.WebApp/Views/Users/Details.cshtml
+++ b/LibApp.WebApp/Views/Users/Details.cshtml
@@ -109,14 +109,18 @@
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.CreatedByUser)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CreatedByUser)
+        <dd class="col-sm-10">
+            <a href="@Url.Action("Details", "Users", new { id = Model.CreatedByUserId })">
+                @Model.CreatedByUser
+            </a>
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.ModifiedByUser)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ModifiedByUser)
+        <dd class="col-sm-10">
+            <a href="@Url.Action("Details", "Users", new { id = Model.ModifiedByUserId })">
+                @Model.ModifiedByUser
+            </a>
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Notes)
