--- a/LibApp.WebApp/Views/Shared/_Layout.cshtml
+++ b/LibApp.WebApp/Views/Shared/_Layout.cshtml
@@ -22,6 +22,7 @@
         <link href="/css/paper-dashboard.css?v=2.0.1" rel="stylesheet"/>
         <link href="/demo/demo.css" rel="stylesheet"/>
         <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+        <link href="~/css/PagedList.css" rel="stylesheet" type="text/css" />
         
         @RenderSection("Scripts", required: false)
     </head>
