--- a/LibApp.WebApp/Views/Books/Index.cshtml
+++ b/LibApp.WebApp/Views/Books/Index.cshtml
@@ -24,9 +24,12 @@
 @*TODO: Check if delete works *@
 @*TODO: Authors *@
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+@if (user?.RoleId is (int)RoleEnum.Admin or (int)RoleEnum.Librarian)
+{
+    <p>
+        <a asp-action="Create">Create New</a>
+    </p>
+}
 
 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-funnel-fill" viewBox="0 0 16 16">
     <path d="M1.5 1.5A.5.5 0 0 1 2 1h12a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-.128.334L10 8.692V13.5a.5.5 0 0 1-.342.474l-3 1A.5.5 0 0 1 6 14.5V8.692L1.628 3.834A.5.5 0 0 1 1.5 3.5z"></path>
@@ -47,15 +50,15 @@
                 
                 <th>Title</th>
                 <th>
-                    <a href="@Url.Action("Index", new { sortOrder = ViewBag.TitleSortParm, currentFilter = ViewBag.CurrentFilter })">
+                    <a href="@Url.Action("Index", new { sortTitleOrder = ViewBag.SortTitleParm, currentFilter = ViewBag.CurrentFilter })">
                         
-                        @if (ViewBag.CurrentSort = "title_desc")
+                        @if (ViewBag.CurrentSort == "title_desc")
                         {
-                            @Html.Raw(svgSortTitleDesc)
+                            @Html.Raw(svgSortTitleAsc)
                         }
                         else
                         {
-                            @Html.Raw(svgSortTitleAsc)
+                            @Html.Raw(svgSortTitleDesc)
                         }
                     </a>
                 </th>
@@ -195,8 +198,9 @@
         </tbody>
     </table>
     <br />
+    
     Page @(bookPages.PageNumber) of @(bookPages.PageCount)
 
     @Html.PagedListPager(bookPages, page => Url.Action("Index",
-            new { page, sortOrder = ViewBag.CurrentSort, currentFilter = ViewBag.CurrentFilter }))
+            new { page, sortTitleOrder = ViewBag.CurrentSortTitle, currentFilter = ViewBag.CurrentFilter }))
 </div>
