LibApp.WebApp - Books SortRelease Working Desc (not Asc)

--- a/LibApp.WebApp/Views/Books/Index.cshtml
+++ b/LibApp.WebApp/Views/Books/Index.cshtml
@@ -220,5 +220,5 @@
     Page @(bookPages.PageNumber) of @(bookPages.PageCount)
 
     @Html.PagedListPager(bookPages, page => Url.Action("Index",
-            new { page, sortTitleOrder = ViewBag.CurrentSortTitle, sortReleaseOrder = ViewBag.CurrentReleaseOrder, currentFilter = ViewBag.CurrentFilter }))
+            new { page, sortTitleOrder = ViewBag.CurrentSortTitle, sortReleaseOrder = ViewBag.CurrentSortRelease, currentFilter = ViewBag.CurrentFilter }))
 </div>
