--- a/LibApp.WebApp/Views/Shared/_Layout.cshtml
+++ b/LibApp.WebApp/Views/Shared/_Layout.cshtml
@@ -139,6 +139,7 @@
             function clearInputs() {
                 document.getElementById("SearchTitleString").value = "";
                 $('#AuthorId').val(null).trigger('change');
+                $('#PublisherId').val(null).trigger('change');
             }
         </script>
 
