--- a/LibApp.WebApp/Views/Shared/_Layout.cshtml
+++ b/LibApp.WebApp/Views/Shared/_Layout.cshtml
@@ -140,6 +140,9 @@
                 document.getElementById("SearchTitleString").value = "";
                 $('#AuthorId').val(null).trigger('change');
                 $('#PublisherId').val(null).trigger('change');
+                $('#CategoryId').val(null).trigger('change');
+                $('#DepartmentId').val(null).trigger('change');
+                $('#LanguageId').val(null).trigger('change');
             }
         </script>
 
