--- a/LibApp.WebApp/Views/Authors/Details.cshtml
+++ b/LibApp.WebApp/Views/Authors/Details.cshtml
@@ -1,8 +1,16 @@
-﻿@model Domain.Models.Author
+﻿@using Microsoft.AspNetCore.Identity
+@using Domain.Models
+@using Microsoft.IdentityModel.Tokens
+
+@inject UserManager<User> UserManager
+
+@model LibApp.WebApp.ViewModels.AuthorViewModel
 
 @{
     ViewData["Title"] = "Details";
     Layout = "~/Views/Shared/_Layout.cshtml";
+
+    var user = await UserManager.GetUserAsync(User);
 }
 
 <h1>Details</h1>
@@ -33,13 +41,13 @@
             @Html.DisplayNameFor(model => model.CreatedByUser)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CreatedByUser.City)
+            @Html.DisplayFor(model => model.CreatedByUser)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.ModifiedByUser)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ModifiedByUser.City)
+            @Html.DisplayFor(model => model.ModifiedByUser)
         </dd>
     </dl>
 </div>
