LibApp.WebApp - Layout clearInputs changed to work with both Books & Users

--- a/LibApp.WebApp/Views/Shared/_Layout.cshtml
+++ b/LibApp.WebApp/Views/Shared/_Layout.cshtml
@@ -137,6 +137,8 @@
         <!-- Clear Button -->
         <script>
             function clearInputs() {
+                document.getElementById("SearchNameString").value = "";
+                $('#RoleId').val(null).trigger('change');
                 document.getElementById("SearchTitleString").value = "";
                 $('#AuthorId').val(null).trigger('change');
                 $('#PublisherId').val(null).trigger('change');
